--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-selenium~=4.21.0
-requests~=2.32.3
-beautifulsoup4~=4.12.3
+selenium
+requests
+beautifulsoup4
+requests_oauthlib
+python-telegram-bot
