--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 TELEGRAM_BOT_TOKEN = W9DUA92NIDAWDASDAG
 TELEGRAM_CHAT_ID = 298319831
-TWITTER_KEY = coajdiaha0HDay823hn2
-TWITTER_SECRET = D-IU90UQhawDJA9-DJA-WU1WNdawdma
-TWITTER_ACCESS_TOKEN = WODJA9023H1-DA-OJDAW-ODASD2311451
-TWITTER_ACCESS_TOKEN_SECRET = sajd-DWndaDWAsajd9-0UeSDMAF-GADAJS_jd9J2
+X_KEY = coajdiaha0HDay823hn2
+X_SECRET = D-IU90UQhawDJA9-DJA-WU1WNdawdma
+
+# Next keys arent required
+# If you dont want to enter next keys, just delate lines, but you could to loggin manually
+X_ACCESS_TOKEN = WODJA9023H1-DA-OJDAW-ODASD2311451
+X_ACCESS_TOKEN_SECRET = sajd-DWndaDWAsajd9-0UeSDMAF-GADAJS_jd9J2
+
