Refactor .env.example to do Telegram bot not required

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-TELEGRAM_BOT_TOKEN = W9DUA92NIDAWDASDAG
-TELEGRAM_CHAT_ID = 298319831
+# Next keys are required (X API KEY and X API SECRET)
 X_KEY = coajdiaha0HDay823hn2
 X_SECRET = D-IU90UQhawDJA9-DJA-WU1WNdawdma
 
+# Next keys are just required if you want to get loggs from a Telegram bot
+# If you dont want to get loggs, just delete next 2 lines
+TELEGRAM_BOT_TOKEN = W9DUA92NIDAWDASDAG
+TELEGRAM_CHAT_ID = 298319831
+
 # Next keys arent required
-# If you dont want to enter next keys, just delate lines, but you could to loggin manually
+# If you dont want to automatically loggin, just 2 delete lines
 X_ACCESS_TOKEN = WODJA9023H1-DA-OJDAW-ODASD2311451
 X_ACCESS_TOKEN_SECRET = sajd-DWndaDWAsajd9-0UeSDMAF-GADAJS_jd9J2
 
