--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ beautifulsoup4
 requests_oauthlib
 python-telegram-bot
 python-dotenv
-flake8
+
+# Next  are only if ur in development environ
+#flake8
