Add Google API Key placeholder for additional functionalities

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ TELEGRAM_CHAT_ID = 298319831
 X_ACCESS_TOKEN = WODJA9023H1-DA-OJDAW-ODASD2311451
 X_ACCESS_TOKEN_SECRET = sajd-DWndaDWAsajd9-0UeSDMAF-GADAJS_jd9J2
 
+# Google API Key for additional functionalities
+GOOGLE_API_KEY = your_google_api_key_here
